--- a/wechat/src/main/webapp/xcview/html/my_homepage.html
+++ b/wechat/src/main/webapp/xcview/html/my_homepage.html
@@ -28,7 +28,9 @@
 	}	
 </script>
 <style>
-
+	.treatment_number_span{
+		display: none;
+	}
 </style>
 </head>
 <!--公用-->
@@ -111,7 +113,7 @@
 			远程诊疗
 		</div>
 		<img src="../images/account05.png" class="img1 y" />
-		<span class="treatment_number_span">0</span>
+		<span class="treatment_number_span"></span>
 		
 	</div>
 	<div class="my_order" onclick="location.href ='my_reservation.html'" style="margin-top: 0;">
@@ -122,7 +124,7 @@
 			
 		</div>
 		<img src="../images/account05.png" class="img1 y" style="width: 0.15rem;height: 0.25rem;margin-right: 0.2rem;margin-top: 0.38rem;" />
-		<span class="number_span" style="padding: 0.1rem 0.2rem;margin-top: 0.25rem;background: #ff4012;border-radius: 100px;float: right;margin-right: 0.26rem;display:none;">0</span>
+		<span class="number_span" style="padding: 0.1rem 0.2rem;margin-top: 0.25rem;background: #ff4012;border-radius: 100px;float: right;margin-right: 0.26rem;display:none;"></span>
 		
 	</div>
 	
