--- a/wechat/src/main/webapp/xcview/html/treatment.html
+++ b/wechat/src/main/webapp/xcview/html/treatment.html
@@ -61,7 +61,8 @@
 	<header>
 		<div class="header">
 			<div class="return" id="home_img"></div>
-			<div class="header_return" onclick="window.history.go(-1);">
+			<!-- <div class="header_return" onclick="window.history.go(-1);"> -->
+			<div class="header_return" onclick="location.href ='/xcview/html/my_homepage.html'">
 				<img src="/xcview/images/back icon.png" />
 			</div>
 			<div class="header_title">远程诊疗</div>
@@ -90,11 +91,11 @@
 					{{/if}}
 					
 					<div class="subject">
-						<div class="head_portrait" data-id="{{item.id}}" onclick="orders('{{item.id}}')">
+						<div class="head_portrait">
 							<img src="{{item.avatar}}?imageMogr2/thumbnail/!90x90r|imageMogr2/gravity/Center/crop/90x90" alt="">
 						</div>
-						<div class="name" data-id="{{item.id}}" onclick="orders('{{item.id}}')">{{item.nickname}}</div>
-						<!--<div class="professional_title" data-id="{{item.id}}" onclick="orders('{{item.id}}')">{{item.title}}</div>-->
+						<div class="name">{{item.nickname}}</div>
+						<!--<div class="professional_title">{{item.title}}</div>-->
 						{{if item.status == 2}}
 							{{if item.start == true}}
 								<div class="starting_treatment">开始诊疗</div>
@@ -116,10 +117,10 @@
 							<div class="check">查看诊疗视频</div>
 						{{else if item.status == 2}}
 							{{if item.start == false}}
-								<div class="delete call_offs delete_{{item.id}" data-id="{{item.id}}"><img src="/xcview/images/dian_03.png" />取消预约</div>
+								<div class="delete call_offs delete_{{item.id}}" data-id="{{item.id}}"><img src="/xcview/images/dian_03.png" />取消预约</div>
 							{{/if}}
 						{{else if item.status == 1}}
-							<div class="check" data-id="{{item.id}}" onclick="orders('{{item.id}}')">去审核</div>
+							<div class="check" data-id="{{item.infoId}}" onclick="orders('{{item.infoId}}')">去审核</div>
 						{{/if}}
 
 					</div>
