手机端直播间ui编写。我的预约，远程诊疗，刷新引入。

--- a/wechat/src/main/webapp/xcview/html/my_homepage.html
+++ b/wechat/src/main/webapp/xcview/html/my_homepage.html
@@ -30,9 +30,11 @@
 <style>
 	.treatment_number_span{
 		display: none;
+		color: #fff;
 	}
 	.treatment{
 		display: none;
+		color: #fff;
 	}
 </style>
 </head>
@@ -112,7 +114,7 @@
 
 	<div class="treatment" onclick="location.href ='treatment.html'" style="margin-top: 0;">
 		<div class="treatment_main" style="float: left;margin-left: 0.26rem;">
-			<img src="../images/my_order.png" class="img0 z" style="margin-top: 0.28rem;" />
+			<img src="../images/therapy.png" class="img0 z" style="margin-top: 0.28rem;" />
 			远程诊疗
 		</div>
 		<img src="../images/account05.png" class="img1 y" />
