--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -547,7 +547,7 @@
 			<div class="screen_show_bg"></div>
 			<div class="screen_show_main">
 				<ul>
-					<li class="filtrate_all" value="" onclick="postsType(this)">全部0</li>
+					<li class="filtrate_all" value="" onclick="postsType(this)">全部</li>
 					<li class="filtrate_sinatv" value="1" onclick="postsType(this)">视频直播</li>
 					<li class="filtrate_sinatv1" value="6" onclick="postsType(this)">语音直播</li>
 					<li class="filtrate_course" value="2" onclick="postsType(this)">课程</li>
