--- a/wechat/src/main/webapp/xcview/html/my_reservation.html
+++ b/wechat/src/main/webapp/xcview/html/my_reservation.html
@@ -26,6 +26,11 @@
 
 <script type="text/javascript" src="/xcview/js/common/popups.js"></script>  <!-- 公用弹框 -->
 <link rel="stylesheet" type="text/css" href="/xcview/css/popups.css"/> <!-- 公用弹框 -->
+
+<!--刷新 -->
+<link rel="stylesheet" href="/xcview/css/minirefresh/minirefresh.css">
+<script type="text/javascript" src="/xcview/js/minirefresh/minirefresh.js"></script>
+
 <script>
 	// 判断横屏展示时的状态
 	window.onorientationchange=function(){
@@ -39,6 +44,31 @@
 <style>
 	body{
 		background:#f0f0f0;
+	}
+
+	/*处理刷新*/
+	.minirefresh-wrap{
+		top: 1.1rem;
+	}
+	.minirefresh-theme-default .minirefresh-downwrap{
+		height: 1rem;
+		line-height: 1rem;
+	}
+	.minirefresh-theme-default .downwrap-content{
+		padding: 0;
+	}
+	.minirefresh-theme-default .minirefresh-upwrap{
+		height: 1rem;
+		max-height: 0.5rem;
+		line-height: 0.6rem;
+		padding: 0;
+		/*margin-top: -0.5rem;*/
+	}
+	.minirefresh-scroll{
+		background: none;
+	}
+	.more_people{
+		/*display: none;*/
 	}
 </style>
 </head>
@@ -56,7 +86,11 @@
 	<!-- 头部结束 -->
 
 	<!-- 中间内容开始 -->
+
 	<div class="my_bookings">
+		<div id="minirefresh" class="minirefresh-wrap">
+			<div class="minirefresh-scroll">
+		<div class="my_bookings_main">
 		<script type="text/html" id="my_bookings">
 		{{each items as item i}}
 		<div class="main main_{{item.id}}" data-deletes="{{item.id}}">
@@ -107,6 +141,9 @@
 		</div>
 		{{/each}}
 		</script>
+			</div>
+		</div>
+		</div>
 	</div>
 	<!-- 中间内容结束 -->
 
