--- a/wechat/src/main/webapp/xcview/html/treatment.html
+++ b/wechat/src/main/webapp/xcview/html/treatment.html
@@ -26,6 +26,10 @@
 
 <script type="text/javascript" src="/xcview/js/common/popups.js"></script>  <!-- 公用弹框 -->
 <link rel="stylesheet" type="text/css" href="/xcview/css/popups.css"/> <!-- 公用弹框 -->
+
+<!--刷新 -->
+<link rel="stylesheet" href="/xcview/css/minirefresh/minirefresh.css">
+<script type="text/javascript" src="/xcview/js/minirefresh/minirefresh.js"></script>
 <script>
 	// 判断横屏展示时的状态
 	window.onorientationchange=function(){
@@ -49,10 +53,35 @@
     	margin-top: 0;
 	}
 	.call_offs img{
-		width: .21rem;
-		height: .27rem;
+		width: .32rem;
+		height: .32rem;
 		vertical-align:middle;
 		margin-right: 0.09rem;
+	}
+
+	/*处理刷新*/
+	.minirefresh-wrap{
+		top: 1.1rem;
+	}
+	.minirefresh-theme-default .minirefresh-downwrap{
+		height: 1rem;
+		line-height: 1rem;
+	}
+	.minirefresh-theme-default .downwrap-content{
+		padding: 0;
+	}
+	.minirefresh-theme-default .minirefresh-upwrap{
+		height: 1rem;
+		max-height: 0.5rem;
+		line-height: 0.6rem;
+		padding: 0;
+		/*margin-top: -0.5rem;*/
+	}
+	.minirefresh-scroll{
+		background: none;
+	}
+	.more_people{
+	
 	}
 </style>
 </head>
@@ -72,6 +101,9 @@
 
 	<!-- 中间内容开始 -->
 	<div class="my_bookings">
+		<div id="minirefresh" class="minirefresh-wrap">
+			<div class="minirefresh-scroll">
+		<div class="my_bookings_main">
 		<script type="text/html" id="my_bookings">
 		{{each items as item i}}
 		<div class="main main_{{item.id}}" data-deletes="{{item.id}}">
@@ -117,7 +149,7 @@
 							<div class="check">查看诊疗视频</div>
 						{{else if item.status == 2}}
 							{{if item.start == false}}
-								<div class="delete delete_btn call_offs delete_{{item.id}}" data-id="{{item.id}}"><img src="/xcview/images/dian_03.png" />取消预约</div>
+								<div class="delete delete_btn call_offs delete_{{item.id}}" data-id="{{item.id}}"><img src="/xcview/images/reservation.png" />取消预约</div>
 							{{/if}}
 						{{else if item.status == 1}}
 							<div class="check" data-id="{{item.infoId}}" onclick="orders('{{item.infoId}}')">去审核</div>
@@ -132,6 +164,9 @@
 		</div>
 		{{/each}}
 		</script>
+		</div>
+			</div>
+		</div>
 	</div>
 	<!-- 中间内容结束 -->
 
