--- a/wechat/src/main/webapp/xcview/html/physician/my_bookings.html
+++ b/wechat/src/main/webapp/xcview/html/physician/my_bookings.html
@@ -85,7 +85,7 @@
 	</div>
 	
 	<div class="handler_btns" style="display: none;">开始远程诊疗</div>
-	<div class="handler_btn" style="display: none;">开始远程诊疗</div>
+	<div class="handler_btns" style="display: none;">开始远程诊疗</div>
 	<div class="check_btn" style="display: none;">查看诊疗视频</div>
 
 	<!-- <div class="handler_btn">申请预约</div> -->
