--- a/wechat/src/main/webapp/xcview/html/my_homepage.html
+++ b/wechat/src/main/webapp/xcview/html/my_homepage.html
@@ -36,6 +36,16 @@
 		display: none;
 		color: #fff;
 	}
+	.number_span{
+		padding: 0.1rem 0.2rem;
+		margin-top: 0.25rem;
+		background: #ff4012;
+		border-radius: 100px;
+		float: right;
+		margin-right: 0.26rem;
+		display:none;
+		color: #fff;
+	}
 </style>
 </head>
 <!--公用-->
@@ -129,7 +139,7 @@
 			
 		</div>
 		<img src="../images/account05.png" class="img1 y" style="width: 0.15rem;height: 0.25rem;margin-right: 0.2rem;margin-top: 0.38rem;" />
-		<span class="number_span" style="padding: 0.1rem 0.2rem;margin-top: 0.25rem;background: #ff4012;border-radius: 100px;float: right;margin-right: 0.26rem;display:none;"></span>
+		<span class="number_span" style=""></span>
 		
 	</div>
 	
