--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -814,6 +814,11 @@
 								</span>
 								<input type="file" style="visibility: hidden;display: inline-block;" id="banner_picIpt" />
 							</div>
+							<span class="banner-size-tip z">
+								<p>文件小于2M</p>
+								<p>支持JPG/PNG等格式图片</p>
+								<p>( 推荐上传规格：260x147 )</p>
+							</span>
 							<p class="banner-all-tip banner-fengmian hide">请上传封面图！</p>
 						</div>
 						<!--链接类型-->
