--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -1448,7 +1448,7 @@
 	<script type="text/html" id="disciple_application_state_id">
 		{{if items.onlineApprenticeStatus == 1 || items.onlineApprenticeStatus == 3}}
 		<div class="disciple_application_states">
-			<div class="disciple_application" onclick="location.href ='/xcview/html/physician/apply_for.html?doctor='+doctorId">在线弟子申请加入</div></div>
+			<div class="disciple_application">在线弟子申请加入</div></div>
 		{{else if items.onlineApprenticeStatus == 2}}
 			<div class="disciple_application_states"><div class="disciple_application" onclick="location.href ='/xcview/html/physician/application_approved.html?doctor='+doctorId">申请已提交，查看信息</div></div>
 		{{else if items.onlineApprenticeStatus == 4}}
