我是医师，轮播图设置

--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -1383,7 +1383,7 @@
 									<p>支持JPG/PNG等格式图片</p>
 									<p>( 推荐上传规格：260x147 )</p>
 								</span>
-									<input type="file" placeholder="请上传封面图" style="visibility: hidden;display: inline-block;" id="class_picIpt" />
+									<input type="file" placeholder="请上传封面图" style="visibility: hidden;display: inline-block;display: none;" id="class_picIpt" />
 								<p class="warning_course_imgPath warning hide">请上传封面图</p>
 							</div>
 							<!--主播姓名-->
