--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -529,7 +529,7 @@
 		<div id="mainMenuBarAnchor"></div>
 		<div class="anchor_navigation" id="mainMenuBar">
 			<ul id="mainMenu">
-				<li class="li li_data" id="li-1"><span class="span"></span><span class="span_hide" style="displays:none;">动态</span><img src="/xcview/images/drop_down.png" alt="" class="hide0" /></li>
+				<li class="li li_data" id="li-1"><span class="span"></span><span class="span_hide" style="displays:none;"></span><img src="/xcview/images/drop_down.png" alt="" class="hide0" /></li>
 				<li class="li li_course" id="li-2">直播</li>
 				<li class="li li_prose_origin" id="li-3" onclick="apprenticeInfo()">师承</li>
 				<li class="li li_evaluate" id="li-4">介绍</li>
@@ -547,7 +547,7 @@
 			<div class="screen_show_bg"></div>
 			<div class="screen_show_main">
 				<ul>
-					<li class="filtrate_all" value="" onclick="postsType(this)">全部</li>
+					<li class="filtrate_all" value="" onclick="postsType(this)">全部<span class='three'>动态</span></li>
 					<li class="filtrate_sinatv" value="1" onclick="postsType(this)">视频直播</li>
 					<li class="filtrate_sinatv1" value="6" onclick="postsType(this)">语音直播</li>
 					<li class="filtrate_course" value="2" onclick="postsType(this)">课程</li>
@@ -1612,6 +1612,7 @@ $(window).bind("scroll", function() {
 		
 		// 点击显示全部动态筛选  
 		$(".dynamic_opacity").click(function(){
+			$(".filtrate_all .three").hide();
 			$(".screen_show").show();
 			$("body").addClass("body");
 		});
@@ -1678,6 +1679,8 @@ $(window).bind("scroll", function() {
         // 点击全部动态
         $(".filtrate_all").click(function(){
         	$(".span_hide").show();   //显示--动态文字
+        	$(".li_data .span_hide").empty();
+        	$(".li_data .span").append("<span class='three'>动态</span>");
         	// $(".span_hide").css("display","block");
             //$(".rests_nav").removeClass("hide");  //其他1
             $(".consilia_nav").removeClass("hide");  // 医案  
@@ -1689,6 +1692,7 @@ $(window).bind("scroll", function() {
 	    });	
         //点击直播
 	    $(".filtrate_sinatv").click(function(){
+	    	$(".li_data .span_hide").empty();
 	    	$(".span_hide").hide();   //隐藏--动态文字
 	    	$(".span_hide").css("display","none");
             //$(".rests_nav").addClass("hide");  //其他1
@@ -1701,6 +1705,7 @@ $(window).bind("scroll", function() {
 	    });
         //点击语音直播
         $(".filtrate_sinatv1").click(function(){
+        	$(".li_data .span_hide").empty();
         	$(".span_hide").hide();   //隐藏--动态文字
             //$(".rests_nav").addClass("hide");  //其他1
             $(".consilia_nav").addClass("hide");  // 医案
@@ -1712,6 +1717,8 @@ $(window).bind("scroll", function() {
         });
 	    //点击课程 
 	    $(".filtrate_course").click(function(){
+	    	$(".li_data .span_hide").empty();
+	    	$(".li_data .span").append("<span class='three'>动态</span>");
 	    	$(".span_hide").show();   //显示--动态文字
             //$(".rests_nav").addClass("hide");  //其他1
             $(".consilia_nav").addClass("hide");  // 医案  
@@ -1723,6 +1730,8 @@ $(window).bind("scroll", function() {
 	    });	
 	    //点击医案
 	    $(".filtrate_consilia").click(function(){
+	    	$(".li_data .span_hide").empty();
+	    	$(".li_data .span").append("<span class='three'>动态</span>");
 	    	$(".span_hide").show();   //显示--动态文字
             //$(".rests_nav").addClass("hide");  //其他1
             $(".consilia_nav").removeClass("hide");  // 医案  
@@ -1734,6 +1743,8 @@ $(window).bind("scroll", function() {
 	    });	
 	    //点击文章 
 	    $(".filtrate_essay").click(function(){
+	    	$(".li_data .span_hide").empty();
+	    	$(".li_data .span").append("<span class='three'>动态</span>");
 	    	$(".span_hide").show();   //显示--动态文字
             //$(".rests_nav").addClass("hide");  //其他1
             $(".consilia_nav").addClass("hide");  // 医案  
@@ -1745,6 +1756,8 @@ $(window).bind("scroll", function() {
 	    });	
 	    //点击其他
 	    $(".filtrate_rests").click(function(){
+	    	$(".li_data .span_hide").empty();
+	    	$(".li_data .span").append("<span class='three'>动态</span>");
 	    	$(".span_hide").show();   //显示--动态文字
             $(".rests_nav").removeClass("hide");  //其他1
             $(".consilia_nav").addClass("hide");  // 医案  
@@ -1759,6 +1772,8 @@ $(window).bind("scroll", function() {
         $(".rests_nav .zan_img").click(function(){
             $(this).attr('src','/xcview/images/zan001.png');
 	    });	
+
+	    // $(".filtrate_all").click();
 	};
 </script>
 <script>
