中医师--页面点击进入其他页面后返回，记录。。查看详情页面，去掉弹框，直接点击下载app

--- a/wechat/src/main/webapp/xcview/html/physician/my_bookings.html
+++ b/wechat/src/main/webapp/xcview/html/physician/my_bookings.html
@@ -78,11 +78,13 @@
 		{{else}}
 			
 		{{/if}}-->
-		<div class="handler_btns" style="display: none;">开始远程诊疗</div>
-		<div class="handler_btn" style="display: none;">开始远程诊疗</div>
+		<div class="determine handler_btns" style="display: none;">下载app开启远程诊疗</div>
+		<div class="determine handler_btn" style="display: none;">下载app开启远程诊疗</div>
 		<div class="check_btn" data-courseId="{{items.courseId}}" style="display: none;">查看诊疗视频</div>
 	    </script>
 	</div>
+
+	
 
 	<div class="handler_reminder">
 		<span>提示：</span>
