我是医师统一规范

--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -1853,7 +1853,7 @@
 							<!--招生标题-->
 							<div class="comment-set-rules">
 								<span class="comment-left-rules"><em>*</em>招生标题</span>
-								<input type="text" class="recruit-title" maxlength="15" placeholder="请填写招生标题" />
+								<input type="text" class="recruit-title" maxlength="30" placeholder="请填写招生标题" />
 								<p class="warning-manage title-null hide">标题不能为空</p>	
 							</div>
 							<!--封面图-->
@@ -1877,7 +1877,7 @@
 								<span class="comment-left-rules"><em>*</em>招生人数</span>
 								<input type="text" class="personal-number"  onkeyup='this.value=this.value.replace(/\D/gi,"")' />
 								<p class="warning-manage personal-null hide">请填写招生人数</p>	
-								<p class="warning-manage personal-alb-null hide">请输入阿拉伯数字</p>	
+								<p class="warning-manage personal-alb-null hide">请输入阿拉伯数字并注意规范</p>	
 							</div>
 							<!--报名截止时间-->
 							<div class="comment-set-rules">
