--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -523,8 +523,8 @@ $(function(){
         <!--直播已结束提示-->
         <div class="video_end_top" style="display: none;">
             <div class="video_end"></div>
-            <p>直播结束，点击返回学习中心</p>
-            <div class="div" onclick="window.location='/xcview/html/my_study.html'">返回</div>
+            <p>哎呀，回放生成失败了...</p>
+            <div class="div" onclick="location.href ='/xcview/html/my_study.html'">学习中心</div>
         </div>
         <!--直播已结束提示-->
         
