我是医师统一输入

--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -1857,7 +1857,7 @@
 								<p class="warning-manage title-null hide">标题不能为空</p>	
 							</div>
 							<!--封面图-->
-							<div class="comment-set-rules" style="width: 619px;margin: 0;">
+							<div class="comment-set-rules" style="width: 619px;margin: 0 0 20px;">
 								<span class="comment-left-rules" style="vertical-align: top;"><em>*</em>封面图</span>
 								<span class="mamage-wrap-img" onclick="$('#manage_picIpt').click()">
 									<p style="font-size: 90px;height: 100px;font-weight: 300;color: #d8d8d8;text-align: center;">+</p>
@@ -1869,7 +1869,7 @@
 									<p>推荐比例：16 : 9</p>
 									<p>推荐上传尺寸：698x396</p>
 								</span>
-								<input type="file" placeholder="请填写您的专栏标题" style="visibility: hidden;display: inline-block;height: 10px;" id="manage_picIpt" />
+								<input type="file" placeholder="请填写您的专栏标题" style="visibility: hidden;display: inline-block;height: 10px;display: none;" id="manage_picIpt" />
 								<p class="warning-manage fengmian-null hide">请上传封面图</p>	
 							</div>
 							<!--招生人数-->
@@ -2024,8 +2024,8 @@
 							<span>专栏</span>
 						</div>
 						<div class="cancel-confirm-box cl">
-							<button class="cancel-column">取消</button>
 							<button class="confirm-column">确认</button>	
+							<button class="cancel-column">取消</button>
 						</div>
 					</div>
 					
