--- a/wechat/src/main/webapp/xcview/html/treatment.html
+++ b/wechat/src/main/webapp/xcview/html/treatment.html
@@ -129,9 +129,10 @@
 						<div class="name">{{item.nickname}}</div>
 						<!--<div class="professional_title">{{item.title}}</div>-->
 						{{if item.status == 2}}
-							{{if item.start == true}}
+							<!--{{if item.start == true}}
 								<div class="starting_treatment">开始诊疗</div>
-							{{/if}}
+							{{/if}}-->
+							<div class="starting_treatment">开始诊疗</div>
 						{{/if}}
 
 						{{if item.status == 3}}
