--- a/wechat/src/main/webapp/xcview/html/treatment_details.html
+++ b/wechat/src/main/webapp/xcview/html/treatment_details.html
@@ -18,6 +18,7 @@
 
 <!--手机嵌入模板-->
 <script type="text/javascript" src="/xcview/js/common/layout.js"></script>
+
 <script>
 	// 判断横屏展示时的状态
 	window.onorientationchange=function(){
@@ -156,17 +157,18 @@
 	<!-- 点击出现弹出框结束 -->
 
 	<!-- 点击开始远程诊疗开始 -->
-	<!-- <div class="tooltip" style="displays: block;">
+	<div class="tooltip">
 		<div class="tooltip_bg"></div>
 		<div class="tooltip_main">
-			<div class="tooltip_main_title">下载app开启远程诊疗</div>
+			<div class="tooltip_main_title">拒绝接受</div>
+			<div class="tooltip_main_title" style="font-size: .28rem;padding: 0 .2rem;margin-bottom: 0.6rem;">若拒绝接受，则该预约人的申请资料将不可恢复</div>
 			<div class="tooltip_bottom">
+				<div class="determine">确认</div>
 				<div class="call_off">取消</div>
-				<div class="determine">去下载</div>
 				<div class="both"></div>
 			</div>
 		</div>
-	</div> -->
+	</div>
 	<!-- 点击开始远程诊疗结束 -->
 </body>
 <script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script>
