--- a/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
+++ b/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
@@ -540,7 +540,7 @@
 				</div>
 				<div class="leave" style="display:none;">主播要离开一会儿，稍等片刻哦~</div>
 				<div class="see-the-replay" style="display:none;">直播结束,点击查看回放<img src="/web/images/refurbish.png" alt="" style="width: 30px;margin-top: 10px;" /></div>
-				<div class="learning-center" style="display:none;"><div id="my_study_center">直播结束，点击返回学习中心</div><div class="onclick">返回</div></div>
+				<div class="learning-center" style="display:none;"><p id="my_study_center">直播结束，点击返回学习中心</p><div class="onclick">返回</div></div>
 				<!--<div class="see-the-replay" style="display:none;">直播结束,点击查看回放</div>-->
 				<div class="media-error" style="display:none;">获取媒体数据错误，请检查网络</div>
 			</div>
