--- a/online-web/src/main/webapp/web/html/ResidentHospital.html
+++ b/online-web/src/main/webapp/web/html/ResidentHospital.html
@@ -238,19 +238,19 @@
 									<div>
 										<span><em>*</em>医馆名称</span>
 										<input type="text" placeholder="请输入医馆名称" maxlength="20" class="hos_name" />
-										<span class="hosName_warn warning hide" style="margin-left: 0px;">医馆名称不能为空</span>
+										<p class="hosName_warn warning hide" style="margin-left: 148px;">医馆名称不能为空</p>
 									</div>
 
 									<div>
 										<span><em>*</em> 所属公司</span>
 										<input type="text" placeholder="请输入医馆所属公司名称" maxlength="" class="doc_name" />
-										<span class="company_warn warning hide" style="margin-left: 0px;">所属公司不能为空</span>
+										<p class="company_warn warning hide" style="margin-left: 148px;">所属公司不能为空</p>
 									</div>
 
 									<div>
 										<span><em>*</em> 统一社会信用代码</span>
 										<input type="text" placeholder="请输入正确的统一社会信用代码" maxlength="18" class="doc_Idnum" />
-										<span class="zhizhaoNum_warn warning hide" style="margin-left: 0px;"> 统一社会信用代码不能为空</span>
+										<p class="zhizhaoNum_warn warning hide" style="margin-left: 148px;"> 统一社会信用代码不能为空</p>
 									</div>
 
 									<div class="teacher_picUpdata">
@@ -271,7 +271,7 @@
 									<div>
 										<span><em>*</em>药品经营许可证号</span>
 										<input type="text" placeholder="请输入正确的药品经营许可证号" maxlength="18" class="doc_zhicheng doc_zhichengss" />
-										<span class="xukeNum_warn warning hide" style="margin-left: 0px;">请输入正确的药品经营许可证号不能为空</span>
+										<p class="xukeNum_warn warning hide" style="margin-left: 148px;">请输入正确的药品经营许可证号不能为空</p>
 									</div>
 
 									<div class="zhicheng_picUpdata">
