互动直播间--字段判断修改。提问返回后的回显bug

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -1697,14 +1697,14 @@ $(window).bind("scroll", function() {
         }else{
             $(".li_data").click();
             // debugger;
-            var li_data = sessionStorage.getItem("li_data");
-            if(isNotBlank(li_data)){
-            	 $(aBtn[parseInt(li_data)]).click();
-            }else{
-            	 $(aBtn[0]).click();
+        }
 
-            	 // $(".span_hide").show();
-            }
+        // 这是判断的  全部里面的每一个
+        var li_data = sessionStorage.getItem("li_data");
+        if(isNotBlank(li_data)){
+        	 $(aBtn[parseInt(li_data)]).click();
+        }else{
+        	 $(aBtn[0]).click();
         }
         
 
