我是医馆基础信息校验统一

--- a/online-web/src/main/webapp/web/html/ResidentHospital.html
+++ b/online-web/src/main/webapp/web/html/ResidentHospital.html
@@ -126,8 +126,7 @@
 										<h3>医馆基础信息</h3>
 									</div>
 
-									<div class="bottomContent">
-
+									<div class="bottomContent" id="hospital-inf-write">
 										<div class="touxiang_picUpdata">
 											<span style="vertical-align: top;"><em>*</em> 医馆头像</span>
 											<span class="touxiang_pic" onclick="$('#touxiang_pic_ipt').click()">
@@ -191,25 +190,25 @@
 									<div>
 										<span><em>*</em>联系人姓名</span>
 										<input type="text" placeholder="请输入医馆联系人姓名" maxlength="20" class="doc_shanchang" />
-										<span class="contant_name_warn warning hide" style="margin-left: 0px;">联系人姓名不能为空</span>
+										<p class="contant_name_warn warning hide" style="margin-left: 115px;">联系人姓名不能为空</p>
 									</div>
 									
 									<div>
                                         <span><em>*</em>电话</span>
                                         <input type="text" placeholder="请输入医馆联系电话" maxlength="20" class="doc_tel" />
-                                        <span class="mobile_name_warn warning hide" style="margin-left: 0px;">电话格式不正确</span>
+                                        <p class="mobile_name_warn warning hide" style="margin-left: 115px;">电话格式不正确</p>
                                     </div>
 
 									<div>
 										<span><em></em>邮箱</span>
 										<input type="text" placeholder="请输入医馆邮箱"  class="doc_hospital" />
-										<span class="email_warn warning hide" style="margin-left: 0px;">邮箱格式不正确</span>
+										<p class="email_warn warning hide" style="margin-left: 115px;">邮箱格式不正确</p>
 									</div>
 
 									<div>
 										<span><em></em>微信</span>
 										<input type="text" placeholder="请输入医馆微信" maxlength="" class="hos_weixin" />
-										<span class="WeChat_warn warning hide" style="margin-left: 0px;">微信格式不正确</span>
+										<p class="WeChat_warn warning hide" style="margin-left: 115px;">微信格式不正确</p>
 									</div>
 
 									<div class="doc_address">
