需求变更添加：点击远程诊疗列表头像昵称区域跳转详情，预告，下载app

--- a/wechat/src/main/webapp/xcview/html/treatment_details.html
+++ b/wechat/src/main/webapp/xcview/html/treatment_details.html
@@ -83,8 +83,14 @@
 		</div>
 		<div class="both"></div>
 
-		
 
+		<div class="button" style="width: 6.98rem;margin: 0 auto;display: none;">
+			<div class="handler_btn" style="display: block !important;width: 3.09rem;float: left;background: #FF4012;">拒绝</div>
+			<div class="handler_btns" style="display: block !important;width: 3.09rem;float: right;">审核通过</div>
+			<div class="both"></div>
+		</div>
+		<div class="determines" style="display: none;">下载app开启远程诊疗</div>
+		<div class="check_btn" data-courseId="{{items.courseId}}" style="display: none;" onclick="foreshow('{{items.courseId}}')">查看诊疗视频</div>
 	    </script>
 	</div>
 	
@@ -96,11 +102,6 @@
 		</script>
 	</div> -->
 
-	<div class="button" style="width: 6.98rem;margin: 0 auto;">
-		<div class="handler_btn" style="display: block !important;width: 3.09rem;float: left;background: #FF4012;">拒绝</div>
-		<div class="handler_btns" style="display: block !important;width: 3.09rem;float: right;">审核通过</div>
-		<div class="both"></div>
-	</div>
 	<!-- <div class="check_btn" style="display: none;">查看诊疗视频</div> -->
 
 
@@ -183,6 +184,8 @@
 
 <script>
 	
-	
+	window.onload = function(){
+
+	};
 </script>
 </html>
