--- a/wechat/src/main/webapp/xcview/html/treatment.html
+++ b/wechat/src/main/webapp/xcview/html/treatment.html
@@ -123,10 +123,13 @@
 					{{/if}}
 					
 					<div class="subject">
-						<div class="head_portrait">
-							<img src="{{item.avatar}}?imageMogr2/thumbnail/!90x90r|imageMogr2/gravity/Center/crop/90x90" alt="">
+						<div class="subject_float" data-id="{{item.infoId}}" onclick="orders('{{item.infoId}}')">
+							<div class="head_portrait">
+								<img src="{{item.avatar}}?imageMogr2/thumbnail/!90x90r|imageMogr2/gravity/Center/crop/90x90" alt="">
+							</div>
+							<div class="name">{{item.nickname}}</div>
 						</div>
-						<div class="name">{{item.nickname}}</div>
+						
 						<!--<div class="professional_title">{{item.title}}</div>-->
 						{{if item.status == 2}}
 							<!--{{if item.start == true}}
