--- a/wechat/src/main/webapp/xcview/html/my_reservation.html
+++ b/wechat/src/main/webapp/xcview/html/my_reservation.html
@@ -16,14 +16,10 @@
 
 <link rel="stylesheet" href="/xcview/css/my_reservation.css">
 <!-- 刷新引入js -->
-<script src="/xcview/js/common/jquery-2.1.4.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="/xcview/js/common/jquery.min-2.1.1.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/common.js"></script>
 <script type="text/javascript" src="/xcview/js/common/template.js"></script>
-
-<!-- 渲染js -->
-<script type="text/javascript" src="/xcview/js/my_reservation.js"></script>
-
 
 <script type="text/javascript" src="/xcview/js/common/commonJumpPlay.js"></script>
 
@@ -33,6 +29,7 @@
 <!--刷新 -->
 <link rel="stylesheet" href="/xcview/css/minirefresh/minirefresh.css">
 <script type="text/javascript" src="/xcview/js/minirefresh/minirefresh.js"></script>
+
 
 <script>
 	// 判断横屏展示时的状态
@@ -178,4 +175,6 @@
 <script>
 	
 </script>
+<!-- 渲染js -->
+<script type="text/javascript" src="/xcview/js/my_reservation.js"></script>
 </html>
